--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lenis": "^1.1.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.10.0-rc.1",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
