--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.16.1",
     "lenis": "^1.1.18",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-router-dom": "^7.1.1"
