--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^11.16.1",
+    "gsap": "^3.12.5",
     "lenis": "^1.1.18",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
