--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^11.16.1",
     "gsap": "^3.12.5",
+    "isomorphic-unfetch": "^4.0.2",
     "lenis": "^1.1.18",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-h5-audio-player": "^3.10.0-rc.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "spotify-url-info": "^3.2.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
